--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ verify_ssl = true
 [packages]
 argon2-cffi = "==16.0.0"
 prompt-toolkit = "==3.0.2"
+paramiko = "==2.7.1"
 
 [requires]
 python_version = "3.8"
